# rust-special-functions

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-wishlist.md  special_functions.tex  status.ods  test.c  unicode.txt
Octave/: carrphi.m  sf_abramowitz_2.m  sf_agm.m  sf_airy.m  sf_asec.m  sf_asinh.m  sf_atanh.m  sf_atanint.m  sf_bell_number.m  sf_bessel_spher_i1.m  sf_bessel_spher_j.m  sf_bessel_spher_y.m  sf_bessel_y.m  sf_bose_einstein.m  sf_cbrt.m  sf_chvcos.m  sf_cosh_m1.m  sf_cot.m  sf_coth.m  sf_coulomb_wave_normalizer.m  sf_coulomb_wave_theta.m  sf_csc.m  sf_csch.m  sf_dawson.m  sf_debye.m  sf_dirichlet_beta.m  sf_dirichlet_lambda.m  sf_elliptic_cel.m  sf_elliptic_el1.m  sf_elliptic_f.m  sf_elliptic_pi.m  sf_elliptic_rd.m  sf_elliptic_rf.m  sf_elliptic_rj.m  sf_erf_inv.m  sf_erfc.m  sf_erfc_inv.m  sf_exp.m  sf_exp_men.m  sf_exp_menx.m  (+69 more)
Octave/@sf_qdouble/: eq.m  gt.m  minus.m  mtimes.m  sf_qdouble.m  sf_qdouble_agm.m  sf_qdouble_floor.m  sf_qdouble_gamma.m  sf_qdouble_log.m  sf_qdouble_zeta.m
data/: zeta.real.csv
f128/: Cargo.toml
f128/src/: lib.rs
f16/: Cargo.toml
f16/src/: lib.rs
farb/: Cargo.toml
farb/src/: lib.rs
old/Octave/: air.m  hermz.m  sf_abramowitz.m  sf_acos.m  sf_acosh.m  sf_acot.m  sf_acoth.m  sf_acsc.m  sf_agud.m  sf_airy_aibi.m  sf_anger_j.m  sf_asin.m  sf_atan.m  sf_bernoulli_number.m  sf_bernoulli_number_scaled.m  sf_bernoulli_poly.m  sf_bessel_i.m  sf_bessel_j.m  sf_bessel_j_dz.m  sf_bessel_k.m  sf_bessel_spher_i2.m  sf_bessel_spher_k.m  sf_bessel_y_dz.m  sf_beta.m  sf_chvsin.m  sf_clausen.m  sf_cos.m  sf_cosh.m  sf_coshint.m  sf_cosint.m  sf_coulomb_wave_f.m  sf_coulomb_wave_phase_shift.m  sf_cvcos.m  sf_cvsin.m  sf_debye_scaled.m  sf_digamma.m  sf_dilog.m  sf_dirichlet_eta.m  sf_elliptic_e.m  sf_elliptic_el2.m  (+91 more)
old/Octave/@sf_qdouble/: display.m  ge.m  le.m  lt.m  mpower.m  mrdivide.m  ne.m  plus.m  sf_qdouble_abs.m  sf_qdouble_exp.m  sf_qdouble_ldexp.m  sf_qdouble_sqrt.m  subsref.m  uminus.m  uplus.m
scratch/: Cargo.toml
scratch/src/: main.rs
sf/: Cargo.toml  Notes.md  rustfmt.toml
sf/benches/: sf_benchmark.rs
sf/data/: airy.real.csv  dilog.real.csv
sf/src/: .exp.rs.swp  .main.rs.swp  .value.rs.swp  agm.rs  airy.rs  algorithm.rs  api.rs  basic.rs  bessel.rs  complex.rs  data.rs  dawson.rs  debye.rs  dual.rs  ellint.rs  embed.rs  erf.rs  exp.rs  expint.rs  f128.rs  f16.rs  farb.rs  gamma.rs  hypergeom.rs  integration.rs  jacobi.rs  kahan.rs  lambert.rs  lib.rs  log.rs  main.rs  numbers.rs  orthopoly.rs  pcf.rs  poly.rs  polylog.rs  quad.rs  real.rs  sievert.rs  solve.rs  (+8 more)
sf/src/bessel/: impls.rs  mod.rs  spher.rs  tests.rs
sf/src/erf/: impls.rs  mod.rs
sf/src/gamma/: impls.rs  mod.rs
sf/src/orthopoly/: chebyshev_t.rs  mod.rs
sf/src/real/: mod.rs  tests.rs
sf_fin/: Cargo.toml
sf_fin/src/: lib.rs
sf_hex_float/: Cargo.toml
sf_hex_float/src/: lib.rs  main.rs
sf_impl/: Cargo.toml  Notes.md
sf_impl/data/: erf.real.csv  gamma.real.csv
sf_impl/src/: agm.rs  algorithm.rs  basic.rs  complex.rs  dawson.rs  ellint.rs  error.rs  exp.rs  expint.rs  f16.rs  float.rs  lib.rs  log.rs  matrix.rs  numbers.rs  poly.rs  polylog.rs  sievert.rs  solve.rs  traits.rs  trig.rs  twin.rs  util.rs
sf_impl/src/airy/: impls.rs  mod.rs
sf_impl/src/algorithm/: integration.rs  mod.rs
sf_impl/src/bessel/: impls.rs  methods.rs  mod.rs  spher.rs
sf_impl/src/complex/: mod.rs  ops.rs
sf_impl/src/erf/: impls.rs  mod.rs
sf_impl/src/gamma/: impls.rs  mod.rs
sf_impl/src/orthopoly/: chebyshev_t.rs  chebyshev_u.rs  chebyshev_v.rs  chebyshev_w.rs  gegenbauer.rs  hermite_h.rs  hermite_he.rs  jacobi.rs  laguerre.rs  legendre.rs  mod.rs
sf_impl/src/pcf/: impls.rs  methods.rs  mod.rs
sf_impl/src/real/: mod.rs  tests.rs
sf_impl/src/trig/: algos.rs  impls.rs  mod.rs
sfc/: Cargo.toml  cbindgen.toml  sfc.h
sfc/src/: lib.rs
