[package]
name = "scratch"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
simple_logger = "*"
plotlib = "*"
#plotters = "*"

[dependencies.sf]
path = "../sf"

[dependencies.sf_impl]
path = "../sf_impl"

[dependencies.sf_hex_float]
path = "../sf_hex_float"

[dependencies.f16]
path = "../f16"
