[package]
name = "sf"
version = "0.1.0"
authors = ["Apollo Hogan <apollo.hogan@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "*"
paste = "*"
log = "*"
#for applications:
simple_logger = "*"

#plotters = "*"

#for eigenvalue calcs:
#nalgebra = "*"

#fast, pure rust bigints:
#ibig = "*"

#microbenchmarking:
#criterion = "*"

#for compile-time configuration:
#cfg_it = "*"

#static assertions
#static_assertions = "*"

#accurate sum algorithms
#accurate = "*"

#ieee754 = "*"
#micromath = "*"
#twofloat = "*"

# interval math?

#approx = "*"
#num-bigint = "*"
#num-complex = "*"
#num-integer = "*"
#num-iter = "*"
#num-rational = "*"
#num-traits = "*"
#num = "*"
#plotlib = "*"
#qd = "*"
