[package]
name = "sf"
version = "0.1.0"
edition = "2021"
authors = ["Apollo Hogan <apollo.hogan@gmail.com>"]

[dependencies]
num-complex = "*"

[dependencies.sf_impl]
path = "../sf_impl"

[dependencies.sf_hex_float]
path = "../sf_hex_float"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "sf_benchmark"
harness = false