[package]
name = "sf_impl"
version = "0.1.0"
authors = ["Apollo Hogan <apollo.hogan@gmail.com>"]
edition = "2021"

[dependencies]
once_cell = "*"
paste = "*"
log = "*"
#cbindgen = "*"

[dependencies.sf_hex_float]
path = "../sf_hex_float"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

########################################

#for eigenvalue calcs:
#nalgebra = "*"

#fast, pure rust bigints:
#ibig = "*"

#microbenchmarking:
#criterion = "*"

#for compile-time configuration:
#cfg_it = "*"

#static assertions
#static_assertions = "*"

#accurate sum algorithms
#accurate = "*"

#ieee754 = "*"
#micromath = "*"
#twofloat = "*"

# interval math?

#approx = "*"
#num-bigint = "*"
#num-complex = "*"
#num-integer = "*"
#num-iter = "*"
#num-rational = "*"
#num-traits = "*"
#num = "*"
#qd = "*"
