[package]
name = "sf_impl"
version = "0.1.0"
edition = "2021"
authors = ["Apollo Hogan <apollo.hogan@gmail.com>"]

[dependencies]
once_cell = "*"
paste = "*"
log = "*"
#for eigenvalue calcs:
nalgebra = "*"


[dependencies.sf_hex_float]
path = "../sf_hex_float"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

########################################

#fast, pure rust bigints:
#ibig = "*"

#for compile-time configuration:
#cfg_it = "*"

#static assertions
#static_assertions = "*"

#accurate sum algorithms
#accurate = "*"

#ieee754 = "*"
#micromath = "*"
#twofloat = "*"

# interval math?

#approx = "*"
#num-bigint = "*"
#num-complex = "*"
#num-integer = "*"
#num-iter = "*"
#num-rational = "*"
#num-traits = "*"
#num = "*"
#qd = "*"
